<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="horizontal"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginBottom="2dp"
    android:gravity="center_vertical"
    android:background="@drawable/contactform_drawable">

    <ImageButton android:id="@+id/avatar_button_contact"
        android:onClick="showContactAvatar"
        android:layout_margin="5dp"
        android:background="@drawable/contactimage_drawable"
        android:layout_width="60dp"
        android:layout_height="60dp"/>

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1">

        <TextView android:id="@+id/name_text_contact"
            android:padding="5dp"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:gravity="center_vertical"
            android:text="@string/name"
            android:textColor="#424242"/>

        <TextView android:id="@+id/status_text_contact"
            android:padding="5dp"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:gravity="center_vertical"
            android:text="@string/EXAMPLE"
            android:textColor="#616161"/>

    </LinearLayout>

    <TextView android:id="@+id/unreadcount_text_contact"
        android:onClick="showContactNotificationActions"
        android:layout_margin="5dp"
        android:background="@drawable/notification_drawable"
        android:layout_width="28dp"
        android:layout_height="28dp"
        android:text="@string/port"
        android:gravity="center"
        android:textSize="12sp"/>

</LinearLayout>