<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:orientation="vertical"
        android:gravity="center_horizontal"
        android:background="@color/backgroundColor"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:layout_margin="16dp"
            android:padding="6dp"
            android:src="@drawable/profile_icon"
            android:background="@drawable/profile_avatar_bg"
            android:layout_width="160dp"
            android:layout_height="160dp"/>

        <TextView
            android:layout_marginBottom="10dp"
            android:text="@string/name"
            android:textColor="#FFF"
            android:textSize="20sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <TextView
            android:layout_marginBottom="10dp"
            android:text="@string/username"
            android:textColor="#FFF"
            android:textSize="16sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <View
            android:background="#FFF"
            android:layout_marginBottom="2dp"
            android:layout_width="match_parent"
            android:layout_height="2dp"/>

    </LinearLayout>

    <LinearLayout
        android:orientation="vertical"
        android:background="#FFF"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <Button android:tag="log out"
            android:id="@+id/logout_button_profile"
            android:onClick="logoutClick"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/log_out"/>
    </LinearLayout>
</LinearLayout>